src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <formula>Member__r.FieloPLT__Program__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>InvoiceNumber__c</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Description__c</columns>
        <columns>Member__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000000}</displayFormat>
        <label>Invoice</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidateInvoiceStatus</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 NOT(TEXT(Status__c)=&apos;Pending&apos;),
 OR(
  ISCHANGED(Amount__c),
  ISCHANGED(Date__c),
  ISCHANGED(Description__c),
  ISCHANGED(Image__c),
  ISCHANGED(InvoiceNumber__c),
  ISCHANGED(Member__c)
 )
)</errorConditionFormula>
        <errorMessage>Only Invoices with status Draft are editable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateMember</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISNEW(),
 ISBLANK(  Member__c  )
)</errorConditionFormula>
        <errorMessage>Member is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateMemberUpdate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISCHANGED(  Member__c ), 
NOT(ISBLANK(PRIORVALUE(Member__c ))), 
PRIORVALUE(Member__c )!=Member__c 
)</errorConditionFormula>
        <errorMessage>Can not update the member field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateStatusChange</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Open&apos;, TEXT(Status__c)=&apos;Pending for Approval&apos;)),
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Open&apos;, TEXT(Status__c)=&apos;Approved&apos;)),
  
  
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Pending for Approval&apos;, TEXT(Status__c)=&apos;Approved&apos;)),
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Pending for Approval&apos;, TEXT(Status__c)=&apos;Rejected&apos;)),
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Pending for Approval&apos;, TEXT(Status__c)=&apos;Open&apos;)),
  
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Approved&apos;, TEXT(Status__c)=&apos;Canceled&apos;)),
  
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Rejected&apos;, TEXT(Status__c)=&apos;Open&apos;)),
  
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Canceled&apos;, TEXT(Status__c)=&apos;Approved&apos;)),
  NOT(AND( TEXT(PRIORVALUE(Status__c))=&apos;Canceled&apos;, TEXT(Status__c)=&apos;Open&apos;))
)</errorConditionFormula>
        <errorMessage>Status transition not allowed</errorMessage>
    </validationRules>
</CustomObject>